# app/Http/Controllers/Patient/PatientV2Controller.php
@@ -312,6 +312,7 @@ class PatientV2Controller extends Controller
             'insurer_id' => 'nullable|exists:insurances,id',
             'insuranceId' => 'nullable|string|max:50',
             'insurance_identifier' => 'nullable|string',
+            'insurance_secondary_identifier' => 'nullable|string',
             'eqhlid' => 'nullable|string',
             'elegibility_date' => 'nullable|date',
             'pos_covered' => 'nullable|array',
