# app/Models/Patient/Patient.php
@@ -47,6 +47,8 @@ use Illuminate\Support\Facades\DB;
  *      enum={"incoming", "active", "inactive", "onHold", "onDischarge", "waitintOnPa", "waitintOnPaIa", "waitintOnIa", "waitintOnServices", "waitintOnStaff", "waitintOnSchool"},
  *      default="inactive", description="Patient status"),
  *     @OA\Property(property="insurer_id", type="integer", format="int64", nullable=true, description="Insurance provider ID"),
+ *     @OA\Property(property="insurance_identifier", type="string", nullable=true),
+ *     @OA\Property(property="insurance_secondary_identifier", type="string", nullable=true),
  *     @OA\Property(property="telehealth", type="string", maxLength=50, default="false", description="Telehealth status"),
  *     @OA\Property(property="pay", type="string", maxLength=50, default="false", description="Payment status"),
  *     @OA\Property(property="created_at", type="string", format="date-time", nullable=true),
@@ -116,6 +118,7 @@ class Patient extends Model
 
         'insuranceId',
         'insurance_identifier',
+        'insurance_secondary_identifier',
         // 'insurer_secundary',
         // 'insuranceId_secundary',
         'elegibility_date',
